kubernetes/fylr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fylr
  namespace: fylr-unib-heidelberg
  labels:
    app: fylr
    instance: fylr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fylr
      instance: fylr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 30%
  template:
    metadata:
      labels:
        app: fylr
        instance: fylr
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - fylr
              - key: type
                operator: In
                values:
                - instance
              - key: instance
                operator: In
                values:
                - fylr
      containers:
      - image: docker.fylr.io/fylr/fylr:main
        name: fylr
        imagePullPolicy: Always
        command: ["fylr"]
        args: [ "server", "-c", "config/fylr.yaml", "--env-prefix", "CFG_FYLR_"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
          - containerPort: 8080
            name: webfrontend
          - containerPort: 8081
            name: api-port
          - containerPort: 8082
            name: backend-port
        volumeMounts:
          - name: fylr-configuration
            mountPath: /fylr/config
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: backend-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: backend-port
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
      volumes:
        - name: fylr-configuration
          configMap:
            name: fylr-config
      restartPolicy: "Always"
      automountServiceAccountToken: false
