kubernetes/fylr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fylr-webui
  labels:
    app: fylr
    type: instance
spec:
  selector:
    app: fylr
    instance: fylr
  ports:
    - name: webui
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fylr-api
  labels:
    app: fylr
    type: instance
spec:
  selector:
    app: fylr
    instance: fylr
  ports:
    - name: api
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: fylr-backend
  labels:
    app: fylr
    type: instance
    selector: prometheus
spec:
  selector:
    app: fylr
    instance: fylr
  ports:
    - name: backend
      protocol: TCP
      port: 8082
      targetPort: 8082
