kubernetes/fylr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fylr-sample
  labels:
    app: fylr
    type: instance
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "<external-url>"
    secretName: fylr-ingress-tls
  rules:
  - host: "<external-url>"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fylr-webui
            port:
              name: webui
